# sigma-workshop

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
data/: agentic_fighters.db  fight1.json
images/: Agentic_fighters.excalidraw  Fighting agents - First proposal.excalidraw
notebooks/: Exercise 0 - Preparing env.ipynb  Exercise 1 - Langchain basics.ipynb  Exercise 2 - Creating our own agent.ipynb  Exercise 3 - LangGraph for simplicity.ipynb  Exercise 4 - Architectures.ipynb  Exercise 5 - Combining ang going further.ipynb  exercises.ipynb  test_graph.ipynb
src/: main.py
src/agents/: agent.py  agentic_tools.py  state.py
src/prompts/: fighters.json  prompts.py
src/utils/: databases.py  logger.py  utils.py
